--- a/packages/amap/package.json
+++ b/packages/amap/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amap",
+  "name": "vue3-amap",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
