--- a/packages/amap/tsconfig.json
+++ b/packages/amap/tsconfig.json
@@ -20,5 +20,6 @@
     ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/components/amap/amap.module.css"],
+  "exclude": ["dist", "node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
