--- a/packages/amap/package.json
+++ b/packages/amap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yuhui/vue3-amap",
+  "name": "@dabu/vue3-amap",
   "version": "0.0.1",
   "description": "高德地图 vue3 amap vue amap",
   "author": "AuYuHui <2419068625@qq.com> (https://github.com/AuYuHui)",
