--- a/packages/amap/package.json
+++ b/packages/amap/package.json
@@ -10,6 +10,7 @@
   "files": [
     "dist"
   ],
+  "homepage": "https://github.com/AuYuHui/vue3-amap",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
