--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:docs": "vitepress dev docs",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,6 +14,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@amap/amap-jsapi-types": "^0.0.13",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
