--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:docs": "vitepress dev docs",
-    "build": "vue-tsc && vite build",
+    "build": "vitepress build docs",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,7 +15,10 @@
   },
   "devDependencies": {
     "@amap/amap-jsapi-types": "^0.0.13",
+    "@vite-pwa/vitepress": "^0.0.5",
     "@vitejs/plugin-vue": "^4.0.0",
+    "fast-glob": "^3.2.12",
+    "pathe": "^1.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
