fix: 重构 amap 组件，绑定对应事件

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "preview": true,
   "version": "0.0.11",
-  "description": "高德地图 vue3 amap vue amap vue3-amap",
+  "description": "高德地图 高德地图vue3组件库 高德地图vue组件库 vue3 amap vue amap vue3-amap",
   "author": {
     "name": "AuYuHui",
     "email": "2419068625@qq.com",
@@ -17,6 +17,9 @@
   "homepage": "https://github.com/AuYuHui/vue3-amap",
   "keywords": [
     "高德地图",
+    "高德地图vue3组件库",
+    "高德地图vue组件库",
+    "高德地图组件库",
     "vue3-amap",
     "vue3-map",
     "vue amap",
