fix: 监听 props 属性

--- a/packages/amap/package.json
+++ b/packages/amap/package.json
@@ -34,8 +34,10 @@
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "naive-ui": "^2.34.3",
     "typed-css-modules": "^0.7.2",
     "typescript": "^4.9.3",
+    "unocss": "^0.50.6",
     "unplugin-vue-define-options": "^1.2.2",
     "vite": "^4.1.0",
     "vite-plugin-dts": "2.0.0-beta.1",
