--- a/packages/amap/tsconfig.json
+++ b/packages/amap/tsconfig.json
@@ -16,10 +16,7 @@
     "paths": {
       "@/*": ["src/*"],
     },
-    "types": [
-    ]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/components/amap/amap.module.css"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "exclude": ["dist", "node_modules"],
-  "references": [{ "path": "./tsconfig.node.json" }]
 }
